--- a/handouts/day-1.tex
+++ b/handouts/day-1.tex
@@ -163,7 +163,7 @@ Now look at whether \ipi{} is still running.
 Notice that although the evolution of MD is paused, \ipi{} itself does not die off but instead continue to run and wait for new client to take over.
 Now start LAMMPS again by typing
 \begin{lstlisting}[language=bash]
-$ lmp_ubuntu < in.lammps
+$ lmp_ubuntu < in.water
 \end{lstlisting}
 What happens to \ipi{} now?
 
